--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="background">#E4EDDB</color>
+    <color name="primary">#8CA780</color>
+    <color name="primary_dark">#95A17F</color>
+    <color name="secondary">#B7C9A6</color>
+    <color name="accent">#7D855E</color>
 </resources>
